@@ -53,6 +53,8 @@ return array(
 	'tx_egovapi_domain_repository_versionrepository' => $classPath . 'Domain/Repository/VersionRepository.php',
 	'tx_egovapi_domain_repository_viewrepository' => $classPath . 'Domain/Repository/ViewRepository.php',
 	'tx_egovapi_pibase' => $classPath . 'Controller/class.tx_egovapi_pibase.php',
+	'tx_egovapi_service_latestchangescleanup' => $classPath . 'Service/LatestChangesCleanup.php',
+	'tx_egovapi_service_latestchangescleanuptask' => $classPath . 'Service/LatestChangesCleanupTask.php',
 	'tx_egovapi_utility_cache' => $classPath . 'Utility/Cache.php',
 	'tx_egovapi_utility_constants' => $classPath . 'Utility/Constants.php',
 	'tx_egovapi_utility_flexform' => $classPath . 'Utility/FlexForm.php',
